<resources>
    <string name="app_name">Captive Portal Controller</string>
    <string name="enable_cp_controller">Enable controller</string>
    <string name="error_no_permission"><b>Captive Portal Controller</b> cannot be enabled unless it can write to Android settings. To do this, run the following command in a root or ADB shell:</string>
    <string name="cp_mode">Mode</string>
    <string name="cp_mode_no_detect">Disable detection</string>
    <string name="cp_mode_display_prompt">Detect and display prompt</string>
    <string name="cp_mode_disconnect_forever_on_detection">Detect but disconnect forever</string>
    <string name="re_enable_networking">You may have to re-enable networking (Wi-Fi/Mobile network) to see the changes.</string>
    <string name="cp_status">Status</string>
    <string name="cp_custom_servers">Custom servers</string>
    <string name="cp_custom_servers_description">Start typing <tt>http</tt> to see suggestions.</string>
    <string name="save_cp_servers">Save</string>
    <string name="cp_enabled">Enabled</string>
    <string name="cp_disabled">Disabled</string>
    <string name="cp_custom_user_agent">Custom user agent</string>
    <string name="cp_default_user_agent" translatable="false">Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.32 Safari/537.36</string>
    <string name="cp_custom_user_agent_description">A fixed and widely-used user agent such as the one specified in the field below improves your privacy.</string>
    <string name="custom_ntp_server">Custom NTP/SNTP server</string>
    <string name="custom_ntp_server_description">The NTP/SNTP server is used when the OS is unable to update time using the mobile network. In most OS, this fallback method is used even when automatic time update is disabled in Settings.</string>
    <string name="save_ntp_server">Save</string>
</resources>
